--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@
 .env.test.local
 .env.production.local
 
+#secret file with keys
+.secret.json
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
