--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "eth-marketplace",
+  "name": "satya-eth-marketplace",
   "version": "0.1.0",
   "description": "An Ethereum Marketplace",
-  "author": "gregory@dappuniversity.com",
+  "author": "satyas2099@gmail.com",
+  "main": "truffle-config.js",
   "dependencies": {
+    "@metamask/detect-provider": "^1.2.0",
+    "@openzeppelin/contracts": "^4.1.0",
+    "@truffle/hdwallet-provider": "^1.4.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "babel-preset-stage-3": "6.24.1",
     "babel-register": "6.26.0",
-    "bootstrap": "4.3.1",
-    "chai": "4.2.0",
+    "bootstrap": "5.0.1",
+    "chai": "4.3.4",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
-    "react": "16.8.4",
-    "react-bootstrap": "1.0.0-beta.5",
-    "react-dom": "16.8.4",
-    "react-scripts": "2.1.3",
-    "truffle": "5.0.5",
-    "web3": "1.0.0-beta.55"
+    "react": "17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "17.0.2",
+    "react-scripts": "4.0.3",
+    "truffle": "5.3.9",
+    "web3": "1.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
